--- a/LM_ARIKETA/Ejercicio10-css.html
+++ b/LM_ARIKETA/Ejercicio10-css.html
@@ -12,11 +12,11 @@
         color:darkcyan;
         background-color: rgb(51, 255, 0);
     }
-    .titulo-red {
-        color:red;
+    .titulo-color {
+        color:blue;
     }
     .titulo-tamaina {
-        font-size: 20px;
+        font-size: 50px;
     }
     /* komentarioa */
     #izena {
@@ -37,6 +37,6 @@
     <h1 class="titulo-red">Adibidea 3</h1>
     <h1 id="izena">Adibidea 4</h1>
     -->
-    <p class="titulo-red">bi estilo erabiliz</p>
+    <p class="titulo-color, titulo-tamaina">bi estilo erabiliz</p>
 </body>
 </html>
