--- a/LM_ARIKETA/Ejercicio10-css.html
+++ b/LM_ARIKETA/Ejercicio10-css.html
@@ -12,7 +12,7 @@
         color:darkcyan;
         background-color: rgb(51, 255, 0);
     }
-    .titulo-color {
+    .titulo-red {
         color:blue;
     }
     .titulo-tamaina {
@@ -37,6 +37,6 @@
     <h1 class="titulo-red">Adibidea 3</h1>
     <h1 id="izena">Adibidea 4</h1>
     -->
-    <p class="titulo-color, titulo-tamaina">bi estilo erabiliz</p>
+    <p class="titulo-red titulo-tamaina">bi estilo erabiliz</p>
 </body>
 </html>
