--- a/LM_ARIKETA/Ejercicio11-css-div.html
+++ b/LM_ARIKETA/Ejercicio11-css-div.html
@@ -6,24 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ejercicio_div</title>
     <style>
-        .titulu{ background-color: darkgrey; padding:0%; font-style: italic; 
+        .fondua{
+                background-color: black
 
         }
 
-        .argazkia{ background-color: aqua; padding: 10%; margin: 1%
+        .titulu{ 
+            background-color: darkgrey; padding:0%; font-style: italic; 
 
         }
 
-        .textua{ background-color: bisque; padding: 5%; margin: 1%
+        .argazkia{ 
+            background-color: aqua; padding: 10%; margin: 1%
 
         }
 
-        .nagusia{ padding: 1%; margin: 2%
+        .textua{ 
+            background-color: bisque; padding: 5%; margin: 1%
+
+        }
+
+        .nagusia{ 
+            padding: 1%; margin: 2%
 
         }
     </style>
 </head>
-<body>
+<body class="fondua">
     <h1 class="titulu">
     Informativo: Mapa de la APR de Madrid Central
     </h1>
