--- a/LM_ARIKETA/Ejercicio11-css-div.html
+++ b/LM_ARIKETA/Ejercicio11-css-div.html
@@ -17,7 +17,8 @@
         }
 
         .argazkia{ 
-            background-color: aqua; padding: 10%; margin: 1%
+            background-color: aqua; padding: 10%; margin: 1%;
+            float: left;
 
         }
 
