--- a/LM_ARIKETA2/javascript/01-javascript.html
+++ b/LM_ARIKETA2/javascript/01-javascript.html
@@ -10,5 +10,9 @@
 <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
 
 <button type="button" onclick='document.getElementById("demo2").innerHTML = "aiiiiiiiiiii!!!!"'>klikatu mesedez!</button>
+
+<script src="js/test.js">
+
+</script>
 </body>
 </html>
