--- a/LM_ARIKETA2/javascript/02-javascript.html
+++ b/LM_ARIKETA2/javascript/02-javascript.html
@@ -23,7 +23,18 @@ document.getElementById('myImage').style.display = "block";
 document.getElementById('boton1').style.display = "block";
 document.getElementById('boton2').style.display = "inline";
 
-function ocultar()
+function ocultar(){
+    document.getElementById('myImage').style.display = "none";
+    document.getElementById('boton1').style.display = "none";
+    document.getElementById('boton2').style.display = "none";
+}
+
+function mostrar() {
+    document.getElementById('myImage').style.display = "inline";
+    document.getElementById('boton1').style.display = "inline";
+    document.getElementById('boton2').style.display = "inline"; 
+    document.getElementById('boton2').style.display = "none";   
+}
 
 
 </script>
