--- a/LM_ARIKETA3/boostrap6.html
+++ b/LM_ARIKETA3/boostrap6.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>LEHENGOKO WEB HORRIALDEA</title>
+    <title>BOSGARREN WEB HORRIALDEA</title>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -16,26 +16,23 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </head>
-  <body>
-    <div class="jumbotron text-center container-md">
-        <h1>LEHEN ARIKETA</h1>
-      </div>
-      
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4 bg-danger text-center">
-            <h3>GORRIA</h3>
-          </div>
-          <div class="col-sm-4 bg-success text-center">
-            <h3>BERDEA</h3>
-          </div>
-          <div class="col-sm-4 bg-warning text-center">
-            <h3>HORIA</h3>
-          </div>
-        </div>
-    </div>
-    <div class="jumbotron text-center">
-        <a href="https://www.google.es"><h1 class="container p-3 my-3 bg-dark text-white">GOOGLE</h1></a>
-      </div>
+<div class="container">
+    <h3> BOTOIAK </h3>
+    <table class="table table-bordered table-xl">
+        <thead>
+            <tr>
+                <th class="bg-primary text-white">
+                    <a href="https://www.google.es" class="btn btn-outline-primary text-white" role="button"> GOOGLE </a>
+                </th>
+                <th class="bg-success text-white">
+                    <button type="button" class="btn btn-outline-info text-white">BOTOI NORMALA</button>
+                </th>
+                <th class="bg-danger text-white">
+                    <input type="submit" class="btn btn-info" value="BOTOIA BORRATEKO">
+                </th>
+            </tr>
+        </thead>
+    </table>
+</div>
   </body>
 </html>
