--- a/LM_ARIKETA3/boostrap3.html
+++ b/LM_ARIKETA3/boostrap3.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>LEHENGOKO WEB HORRIALDEA</title>
+    <title>HIRUGARREN WEB HORRIALDEA</title>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -16,26 +16,21 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </head>
-  <body>
-    <div class="jumbotron text-center container-md">
-        <h1>LEHEN ARIKETA</h1>
+  <body style="background-color: grey;">
+      <div class="container p-3 my-3">
+          <h1>LETRAK</h1>
       </div>
-      
       <div class="container">
-        <div class="row">
-          <div class="col-sm-4 bg-danger text-center">
-            <h3>GORRIA</h3>
-          </div>
-          <div class="col-sm-4 bg-success text-center">
-            <h3>BERDEA</h3>
-          </div>
-          <div class="col-sm-4 bg-warning text-center">
-            <h3>HORIA</h3>
-          </div>
-        </div>
-    </div>
-    <div class="jumbotron text-center">
-        <a href="https://www.google.es"><h1 class="container p-3 my-3 bg-dark text-white">GOOGLE</h1></a>
+        <h1 class="display-1">h1 LETRA <small>textu txikia</small></h1>
+        <h2 class="display-2">h2 LETRA <small>textu txikia</small></h2>
+        <h3 class="display-3">h3 LETRA <small>textu txikia</small></h3>
+        <h4 class="display-4">h4 LETRA <small>textu txikia</small></h4>
+        <p> Horrial hau froga <mark>bakarrik</mark> da </p>
+      </div>
+      <div class="container">
+        <h3> DESKRIPZIOA</h3>
+        <dt>BLANTZEKO</dt>
+        <dd>normal</dd>
       </div>
   </body>
 </html>
