no me sale una mierda

--- a/proyecto/inicio.html
+++ b/proyecto/inicio.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/estilos.css" media="screen" />
 </head>
 <body>
+  
 <div>
   <img src="img/uni.png">
   <h2>Inicio</h2>
@@ -17,7 +18,8 @@
 
     
     <p class="bat">
-        <img src="img/fondo.png">
+        <img id="imagen1" src="img/fondo.png"></a>
+        <button type="button" onclick='document.getElementById("demo2").innerHTML = "aiiiiiiiiiii!!!!"'>klikatu mesedez!</button>
     </p>
   </article>
 </section>
