no me funciona 2

--- a/proyecto/inicio.html
+++ b/proyecto/inicio.html
@@ -18,8 +18,8 @@
 
     
     <p class="bat">
-        <img id="imagen1" src="img/fondo.png"></a>
-        <button type="button" onclick='document.getElementById("demo2").innerHTML = "aiiiiiiiiiii!!!!"'>klikatu mesedez!</button>
+        <img id="imagen1" src="img/fondo.png">
+        <img> 
     </p>
   </article>
 </section>
