--- a/proyecto/inicio.html
+++ b/proyecto/inicio.html
@@ -18,9 +18,9 @@
     <iframe width="1280" height="720" src="https://www.youtube.com/embed/m3WV8Idd_t8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     <p class="bat">
-        <img id="imagen1" src="img/fondo.png">
-        
+        <img id="demo2" src="img/fondo.png">
     </p>
+    <button type="button" onclick='document.getElementById("demo2").innerHTML = "aiiiiiiiiiii!!!!"'>klikatu mesedez!</button>  
   </article>
 </section>
 
