--- a/PHP/proyectoPHP/index.html
+++ b/PHP/proyectoPHP/index.html
@@ -17,7 +17,7 @@
   <nav>
     <ul>
       <li><a href="inicio.html">Inicio</a></li>
-      <li><a href="asignaturas.html">Asignaturas</a></li>
+      <li><a href="asignaturas.php">Asignaturas</a></li>
       <li><a href="#">Personas</a></li>
       <li><a href="#">Bolsa Trabajo</a></li>
     </ul>
