--- a/PHP/proyectoPHP/inicio.html
+++ b/PHP/proyectoPHP/inicio.html
@@ -20,7 +20,7 @@
     <p class="bat">
         <img id="demo2" src="img/fondo.png">
     </p>
-    <button type="button" onclick='document.getElementById("demo2").innerHTML = "aiiiiiiiiiii!!!!"'>klikatu mesedez!</button>  
+    <button type="button" onclick='document.getElementById("demo2").innerHTML = ""'><a href="index.html">INICIO</a></button>  
   </article>
 </section>
 
