--- a/PHP/proyectoPHP/EL KLUB/EL_KLUB2.HTML
+++ b/PHP/proyectoPHP/EL KLUB/EL_KLUB2.HTML
@@ -72,7 +72,7 @@ EL KLUB
             <table>
                     <TR>
                         <td style="background-color:darkturquoise; color: black" align="right">
-            <a href="EL KLUB.HTML"> <H3>RETROCEDER</H3>
+            <a href="EL KLUB.PHP"> <H3>RETROCEDER</H3>
                         </td>
                     </TR>
             </table>
