--- a/PHP/proyectoPHP/EL KLUB/EL_KLUB3.HTML
+++ b/PHP/proyectoPHP/EL KLUB/EL_KLUB3.HTML
@@ -52,14 +52,14 @@ EL KLUB
             <table>
             <TR>
                 <td style="background-color:darkturquoise; color: black">
-                <a href="EL KLUB2.html"> <H3>RETROCEDER</H3></a>
+                <a href="EL_KLUB2.html"> <H3>RETROCEDER</H3></a>
                 </td>
             </TR>
         </table>
         <table align="right">
                 <TR>
                     <td style="background-color:darkturquoise; color: black" align="right">
-        <a href="EL_KLUB.HTML"><h3 align="right">HOME</h3></a>
+        <a href="EL KLUB.PHP"><h3 align="right">HOME</h3></a>
                 </td>
                 </TR>
         </table>
