--- a/PHP/proyectoPHP/EL KLUB/EL_KLUB3.HTML
+++ b/PHP/proyectoPHP/EL KLUB/EL_KLUB3.HTML
@@ -7,17 +7,23 @@ EL KLUB
  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="estilo.css">
     </head>
     
     <body>
-        <style>
-            body{background-color: darkgoldenrod}
-        </style>
-    <h1 style="color:papayawhip ; background-color:silver" align="center">
+        <div class="topnav">
+            <a class="active" href="SOCIOS_KLUB.PHP"> 
+            <h3>PARA VER SOCIOS</h3></a>
+            <a  href="EL_KLUB2.HTML"> 
+            <H3>MOMASOS</H3> </a>
+            <img src="600px-Instagram-Icon.png"  width="30" height="30" alt="film title">
+                <a href="https://www.instagram.com/elklub_ofisial/" >EL KLUB</a>           
+        </diV>
+    <h1 class="lau">
             EL KLUB 
         </h1>
         <p align="center">
-            <H2 style="animation: reverse; color: darkturquoise" align="center">
+            <H2 class="hiru">
                 MEMES
             </H2>
         </p>   
